--- a/hokou.html
+++ b/hokou.html
@@ -28,21 +28,8 @@ body {
 			</font>
 		</caption>
 			<tr align = "left">
-					<th width = "95">10/18(火)</th> <td><u>7・8h</u> 保健・体育Ⅱ <br>下校は 16:20 頃です。</td>
+					<th width = "95">yy/xx(d)</th> <td><u>λh</u> Not Schedule <br>下校は hh:mm 頃です。</td>
 			</tr>
-			<tr align = "left">
-					<th width = "95">10/25(火)</th> <td><u>7・8h</u> 線形代数B (遠隔) <br>下校は 16:20 頃です。</td>
-			</tr>
-			<tr align = "left">
-					<th width = "95">11/15(火)</th> <td><u>7h</u> 基礎英語ⅡB <br>下校は 15:35 頃です。</td>
-			</tr>
-			<tr align = "left">
-					<th width = "95">11/22(火)</th> <td><u>7・8h</u> 電気基礎 <br>下校は 16:20 頃です。</td>
-			</tr>
-			<tr align = "left">
-					<th width = "95">12/13(火)</th> <td><u>7・8h</u> 日本語表現 <br>下校は 16:20 頃です。</td>
-			</tr>
-
 	</table>	
 	
 <!--表 終-->
@@ -60,13 +47,7 @@ body {
 			</font>
 		</caption>
 			<tr align = "left">
-				<th width = "95">10/20(木)</th><td>午後 クラスマッチ</td>
-			</tr>
-			<tr align = "left">
-				<th width = "95">10/21(金)</th><td>全日 クラスマッチ</td>
-			</tr>
-			<tr align = "left">
-				<th width = "95">11/5・6<br>(土・日)</th><td>高専祭(星瞬祭)</td>
+				<th width = "95">yy/xx(d)</th><td>連絡事項はありません。</td>
 			</tr>
 	</table>
 
@@ -86,7 +67,7 @@ body {
 <br><br>
 
 
-<a href = "PDF/hokou.pdf" target = "_blank">
+<a href = "hokou.pdf" target = "_blank">
 	<font color = "#7fffd4">
 		<p>
 			<span style = "background-color:#191970">◆サイト使い方PDFを開く◆</span>
@@ -111,10 +92,11 @@ body {
 	<h2>
 		<p>更新内容</p>
 	</h>
-	<p>5/12(木) 掲載場所(URL)の変更を行いました。<br>よって、後日今までの方は使えなくなります。</p>
-	<p>5/10(火) ［補講］の更新</p>
-	<p>5/9(月) ［連絡事項］の追加</p>
-	<p>5/8(日) サイト開設 / PDF発行</p>
+	<p>R5 4/10(月) 掲載場所(URL)の変更を行いました。<br>よって、後日今までの方は使えなくなります。</p>
+	<p>R4 5/12(木) 掲載場所(URL)の変更を行いました。<br>よって、後日今までの方は使えなくなります。</p>
+	<p>R4 5/10(火) ［補講］の更新</p>
+	<p>R4 5/9(月) ［連絡事項］の追加</p>
+	<p>R4 5/8(日) サイト開設 / PDF発行</p>
 </font>
 
 <!--更新内容 終-->
@@ -125,8 +107,8 @@ body {
 
 	<p style = "text-align: right">
 		<font size = "2" color = "black">
-			独立行政法人国立高等専門学校機構高知工業高等専門学校 ２年 学生 <br>
-			更新 : 2022 / 10 / 14 <br>
+			独立行政法人国立高等専門学校機構高知工業高等専門学校 3年 学生 <br>
+			更新 : 2023 / 4 / 10 <br>
 		</font>
 	</p>
 
