--- a/hokou.html
+++ b/hokou.html
@@ -61,7 +61,7 @@ body {
 		<span style = "background-color:black">時間割</span>
 	</p>
 </font>
-		<img src = "gazou/jikannwari.png" width = "390" height = "220">
+		<img src = "R5前期下校時刻.png" width = "390" height = "220">
 <!--時間割 終-->
 
 <br><br>
