--- a/hokou.html
+++ b/hokou.html
@@ -4,8 +4,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width">
 	<title>補講等の連絡</title>
-	<link rel="icon" href="gazou/t_pien.png">
-	<link rel="apple-touch-icon" href="gazou/t_pien.png">
+	<link rel="icon" href="t_pien.png">
+	<link rel="apple-touch-icon" href="t_pien.png">
 </head>
 <body link = "green" vlink = "red" alink = "pink">
 
