--- a/hokou.html
+++ b/hokou.html
@@ -47,7 +47,11 @@ body {
 			</font>
 		</caption>
 			<tr align = "left">
-				<th width = "95">yy/xx(d)</th><td>連絡事項はありません。</td>
+				<th width = "95">4/12(水)</th><td>健康診断のため授業終了時間は16:20です。<br>しかし部活があるため下校時刻は変更なしです。</td>
+			</tr>
+
+			<tr align = "left">
+				<th width = "95">4/14(金)</th><td>12日(水)に授業がなかったため、水曜時間割となります。<br>よって、下校時刻は<b>14:40</b>です。</td>
 			</tr>
 	</table>
 
