--- a/Godoshiki.html
+++ b/Godoshiki.html
@@ -3,6 +3,5 @@
   <title>合同式の計算</title>
 </head>
 <body>
-  <iframe src="https://paiza.io/projects/e/pZb37E8eOve6NRDQT14L6A?theme=twilight" width="100%" height="500" scrolling="no" seamless="seamless"></iframe>
-</body>
+  <iframe src="https://paiza.io/projects/e/pZb37E8eOve6NRDQT14L6A?theme=twilight" width="100%" height="500" scrolling="no" seamless="seamless"></iframe></body>
 </html>
